Add some more references and implementation beginnings.

--- a/.gitignore
+++ b/.gitignore
@@ -553,3 +553,5 @@ tags
 
 # End of https://www.toptal.com/developers/gitignore/api/emacs,cmake,c++,vim,tex,python
 
+notes.html
+/implementation/dancing-links
